challenge in vlog list and mymoney video updload

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -568,4 +568,5 @@
   <color name="color_BABABA">#BABABA</color>
   <color name="editor_text_highlight">#92C6FC</color>
   <color name="editor_text_selector">#157EE6</color>
+  <color name="color_D63C55">#D63C55</color>
 </resources>
