--- a/app/src/main/res/layout/fragment_add_proof.xml
+++ b/app/src/main/res/layout/fragment_add_proof.xml
@@ -291,4 +291,81 @@
         app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
   </ScrollView>
+
+  <RelativeLayout
+    android:id="@+id/chooseMediaTypeContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/trans_gray"
+    android:clickable="true"
+    android:elevation="5dp"
+    android:fitsSystemWindows="true"
+    android:visibility="gone">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:background="@drawable/custom_dialog_bg"
+      android:clickable="true"
+      android:orientation="vertical">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/headerLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="23dp"
+        android:layout_marginTop="23dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:text="@string/choose_article_image.toolbar.title"
+        android:textColor="@color/videos.dialog.title"
+        android:textSize="18sp"
+        app:fontName="oswald_regular.ttf" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/chooseVideoTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:paddingTop="10dp"
+        android:text="@string/choose_video_from_gallery"
+        android:textColor="@color/videos.upload_option.camera"
+        android:textSize="18sp"
+        app:fontName="oswald.ttf" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/chooseImageTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:paddingTop="10dp"
+        android:text="@string/choose_from_gallery"
+        android:textColor="@color/videos.upload_option.camera"
+        android:textSize="18sp"
+        app:fontName="oswald.ttf" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/cancelTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:paddingTop="10dp"
+        android:text="@string/videos.upload_option.cancel"
+        android:textColor="@color/app_red"
+        app:fontName="oswald_regular.ttf" />
+    </LinearLayout>
+
+  </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
