--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -569,4 +569,5 @@
   <color name="editor_text_highlight">#92C6FC</color>
   <color name="editor_text_selector">#157EE6</color>
   <color name="color_D63C55">#D63C55</color>
+  <color name="color_2A2A2A">#2A2A2A</color>
 </resources>
