--- a/app/src/main/res/layout/ss_comment_replies_item.xml
+++ b/app/src/main/res/layout/ss_comment_replies_item.xml
@@ -1,103 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/replyRootView"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="@color/white_color">
+
+  <RelativeLayout
+    android:id="@+id/relativeMainContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/replyRootView"
-    android:background="@color/white_color">
+    android:layout_marginLeft="24dp"
+    android:paddingLeft="10dp"
+    android:paddingTop="8dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="4dp">
 
-    <RelativeLayout
-        android:id="@+id/relativeMainContainer"
-        android:layout_width="match_parent"
+    <com.mikhaellopez.circularimageview.CircularImageView
+      android:id="@+id/commentorImageView"
+      android:layout_width="@dimen/ad_comments_profile_pic_width"
+      android:layout_height="@dimen/ad_comments_profile_pic_width"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true"
+      android:contentDescription="@string/author_img"
+      android:src="@drawable/default_commentor_img"
+      android:visibility="visible"
+      app:civ_border="true"
+      app:civ_border_color="@color/white_color"
+      app:civ_border_width="0dp"
+      app:civ_shadow="true"
+      app:civ_shadow_color="@color/grey"
+      app:civ_shadow_radius="4" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/commentorUsernameTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="3dp"
+      android:layout_marginLeft="3dp"
+      android:layout_toEndOf="@+id/commentorImageView"
+      android:layout_toRightOf="@+id/commentorImageView"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:paddingLeft="5dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.username"
+      android:textSize="@dimen/ad_comments_username"
+      android:visibility="gone"
+      app:fontName="oswald_regular.ttf" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/commentDataTextView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/commentorUsernameTextView"
+      android:layout_toEndOf="@id/commentorImageView"
+      android:layout_marginTop="8dp"
+      android:ellipsize="end"
+      android:paddingLeft="10dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.body"
+      android:textSize="@dimen/ad_comments_text"
+      app:fontName="open_sans.ttf" />
+
+    <LinearLayout
+      android:id="@+id/dateContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/commentDataTextView"
+      android:layout_toEndOf="@id/commentorImageView"
+      android:orientation="horizontal">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/commentDateTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:paddingBottom="4dp"
+        android:layout_marginTop="5dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8dp">
+        android:paddingRight="@dimen/space_10"
+        android:paddingTop="@dimen/space_5"
+        android:paddingBottom="@dimen/space_5"
+        android:textColor="#979797"
+        android:textSize="11sp"
+        app:fontName="Roboto-Regular.ttf" />
+    </LinearLayout>
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/commentorImageView"
-            android:layout_width="@dimen/ad_comments_profile_pic_width"
-            android:layout_height="@dimen/ad_comments_profile_pic_width"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="@string/author_img"
-            android:src="@drawable/default_commentor_img"
-            android:visibility="visible"
-            app:civ_border="true"
-            app:civ_border_color="@color/white_color"
-            app:civ_border_width="0dp"
-            app:civ_shadow="true"
-            app:civ_shadow_color="@color/grey"
-            app:civ_shadow_radius="4" />
+      <LinearLayout
+        android:id="@+id/likeAndReplyContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dateContainer"
+        android:layout_alignStart="@+id/commentorUsernameTextView"
+        android:layout_alignLeft="@+id/commentorUsernameTextView"
+        android:layout_toEndOf="@id/commentorImageView"
+        android:orientation="horizontal">
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/commentorUsernameTextView"
+          <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/likeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_toEndOf="@+id/commentorImageView"
-            android:layout_toRightOf="@+id/commentorImageView"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.username"
-            android:textSize="@dimen/ad_comments_username"
-            app:fontName="oswald_regular.ttf" />
+            android:drawableLeft="@drawable/ic_like_grey"
+            android:drawablePadding="@dimen/space_5"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="14sp" />
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/commentDataTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@id/commentorUsernameTextView"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.body"
-            android:textSize="@dimen/ad_comments_text"
-            app:fontName="open_sans.ttf" />
 
-        <LinearLayout
-            android:id="@+id/dateContainer"
+          <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/replyCommentTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@+id/commentDataTextView"
-            android:orientation="horizontal">
+            android:layout_marginStart="45dp"
+            android:drawableLeft="@drawable/ic_shape"
+            android:drawablePadding="@dimen/space_5"
+            android:padding="10dp"
+            android:visibility="gone"
+            android:text="@string/reply"
+            android:textColor="@color/ad.comment.date"
+            android:textSize="@dimen/ad_comments_date"
+            app:fontName="Roboto-Regular.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentDateTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/ad.comment.date"
-                android:textSize="@dimen/ad_comments_date"
-                app:fontName="oswald.ttf" />
-        </LinearLayout>
+          <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:text="Date"
+            android:textColor="@color/ad.comment.date"
+            android:textSize="@dimen/ad_comments_date"
+            android:visibility="gone"
+            app:fontName="oswald.ttf" />
+      </LinearLayout>
 
-    </RelativeLayout>
 
-    <View
-        android:id="@+id/underlineView"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/relativeMainContainer"
-        android:layout_marginTop="10dp"
-        android:background="@color/grey_light"
-        android:visibility="visible" />
+
+  </RelativeLayout>
+
+  <View
+    android:id="@+id/underlineView"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:layout_below="@+id/relativeMainContainer"
+    android:layout_marginTop="10dp"
+    android:background="@color/grey_light"
+    android:visibility="visible" />
 
 </RelativeLayout>
