--- a/app/src/main/res/layout/vlog_challenge_card.xml
+++ b/app/src/main/res/layout/vlog_challenge_card.xml
@@ -20,7 +20,6 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
-      android:layout_toEndOf="@+id/user_image"
       android:text="CHALLENGE"
       android:textColor="@color/color_D63C55"
       android:textSize="14sp"
@@ -97,8 +96,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/video_layout"
+    android:ellipsize="marquee"
     android:letterSpacing="-0.02"
     android:lineSpacingExtra="5sp"
+    android:lines="2"
     android:paddingStart="18dp"
     android:paddingTop="8dp"
     android:paddingEnd="18dp"
