--- a/app/src/main/res/layout/video_listing_item.xml
+++ b/app/src/main/res/layout/video_listing_item.xml
@@ -46,10 +46,10 @@
           android:id="@+id/articleImageView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:adjustViewBounds="true"
           android:layout_alignParentTop="true"
           android:layout_alignParentEnd="true"
           android:layout_centerVertical="true"
+          android:adjustViewBounds="true"
           android:contentDescription="@string/author_img"
           android:src="@drawable/default_article" />
 
@@ -136,32 +136,35 @@
             android:textSize="12sp"
             card_view:fontName="open_sans.ttf" />
 
-          <ImageView
-            android:id="@+id/goldVlogImageView"
+          <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/recommendCountTextView"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="@dimen/space_5"
-            android:gravity="center_vertical"
-            android:paddingStart="5dp"
-            android:paddingEnd="10dp"
-            android:src="@drawable/ic_star_yellow"
-            android:visibility="visible" />
+            android:orientation="horizontal">
 
-          <ImageView
-            android:id="@+id/winnerVlogImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="@dimen/space_5"
-            android:layout_toStartOf="@+id/goldVlogImageView"
-            android:gravity="center_vertical"
-            android:paddingStart="5dp"
-            android:paddingEnd="10dp"
-            android:src="@drawable/ic_trophy"
-            android:visibility="visible" />
+            <ImageView
+              android:id="@+id/winnerVlogImageView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="@dimen/space_5"
+              android:gravity="center_vertical"
+              android:paddingStart="5dp"
+              android:paddingEnd="10dp"
+              android:src="@drawable/ic_trophy"
+              android:visibility="visible" />
+
+            <ImageView
+              android:id="@+id/goldVlogImageView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="@dimen/space_5"
+              android:gravity="center_vertical"
+              android:paddingStart="5dp"
+              android:paddingEnd="10dp"
+              android:src="@drawable/ic_star_yellow"
+              android:visibility="visible" />
+          </LinearLayout>
         </RelativeLayout>
 
         <ImageView
